v6.1.0:
- update szs to version 1.50a
- support for MKWiimm 2015-08
- support for MKWiimm 2015-12
- support for MKWiimm 2016-02

v6.0.0:
- update szs to version 1.40a
- add support for MKWiimm 2015-05
- support for replacing characters in NSMBW

v5.4.0:
- fixed major bug creating MKWiimm: image was not saved to proper
  destination directory (now everything's fine)
- update wit to version 2.31a
- update szs to version 1.39a
- add support for MKWiimm 2015-03
- add support for creating multiple MKWiimm at once
- add support for replacing karts in MKWiimm
  The madness begins, feel free to test this out. downloaded
  karts are prefixed mkwiimm_kart_ to avoid naming collision
  with fonts and items (3-chars.szs naming-scheme)
  .
  Original files are backed-up in ${PATCHIMAGE_RIIVOLUTION_DIR}/ \
  ${GAME}_SZS/ - for example /home/chris/Hacks/RMCP27_SZS/ and
  restored every time when you change your selection on the same
  game.
  .
  Your choices are saved into ${HOME}/.patchimage.choice, if
  you want to modify another MKWiimm with the same settings,
  simply enter y when the script asks you whether you want to
  apply your previous settings, else enter n for new choices.
  .
  No dummys were harmed during the making of this feature
- downloaded fonts for MKWiimm are now prefixed mkwiimm_font_
- downloaded items for MKWiimm are now prefixed mkwiimm_item_
- add support for SMN?41 (Devil Mario Winter Special)
- add support for SMN?31 (New Super Mario Bros. Wii - Other World)
- add MKWIIMM_OVERRIDE_SZS variable to patchimage.rc
  If set to TRUE patchimage will override the supplied SZS tools
  of the MKWiimm patcher with it's own version of the tools.
  .
  This is useful when the supplied ones don't work with your system's
  libpng (usually this happens on non-recent Debian GNU/Linux).
  .
  If creating anything newer than RMCP26 (2015 versions) the tools will
  be never overriden (for now, does not work yet).

v5.3.0:
- update wit to 2.30a
- update szs to 1.36b